--- a/index.html
+++ b/index.html
@@ -52,12 +52,16 @@
             background-color: darkred;
         }
 h2{
-    font-size: x;
+    font-size: 18px;
             color: white;
-            text-shadow: 1px 1px 5px ;
-            margin: 20px auto;
+            text-shadow: 1px 1px 5px black;
+            margin: 40px auto;
             max-width: 700px;
   }
+        a{font-size: 15px;
+            color: white;
+            margin: 40px auto;
+            max-width: 700px;
     
     </style>
 </head>
