--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
             background-color: darkred;
         }
 h2{
+    text-align: left;
     font-size: 18px;
             color: white;
             text-shadow: 1px 1px 5px black;
             margin: 40px auto;
+            margin-top: 60px;
             max-width: 700px;
   }
         a{font-size: 15px;
@@ -76,7 +78,7 @@ h2{
         
         <h2>Ressources externes :</h2>
 
-           <ul style="display: flex; justify-content: center; gap: 60px; list-style: none; padding: 0; margin-top: 50px;">
+           <ul style="display: flex; gap: 60px; list-style: none; padding: 0; margin-top: 50px;">
         
         <li> 
             <a href="https://www.ursinaengine.org/"> Ursina Engine</a>
@@ -89,7 +91,7 @@ h2{
             <a href="https://pixabay.com"> Pixabay pour la musique libre de droit</a>
                </li>
                <li>
-            <a href="https://la sonotheque.org/"> La sonotheque pour les bruitages libre de droit</a>
+            <a href="https://lasonotheque.org/"> La sonotheque pour les bruitages libre de droit</a>
                </li>
 
            </ul>
