Remove list style from external resources list

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ h2{
         
         <h2>Ressources externes :</h2>
 
-           <ul>
+           <ul style= "list-style-type: none">
         
         <li> 
             <a href="https://www.ursinaengine.org/"> Ursina Engine</a>
