Add Google Fonts links to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Galada&display=swap" rel="stylesheet">
 <head>
     <title>Insania Ludum</title>
     <style>
@@ -22,7 +25,8 @@
         }
 
         h1 {
-            font-size: 60px;
+            font-family:'Galada';
+            font-size: 85px;
             color: darkred;
             text-shadow: 2px 2px 10px black;
             margin-bottom: 20px;
@@ -92,6 +96,9 @@ h2{
                </li>
                <li>
             <a href="https://lasonotheque.org/"> La sonotheque pour les bruitages libre de droit</a>
+               </li>
+               <li>
+            <a href="https://fonts.google.com/"> Google Fonts pour les polices des sites</a>
                </li>
 
            </ul>
