Revise overlay content and game introduction
Updated overlay text and improved game description.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         .overlay {
-            background-color: rgba(0, 0, 0, 0.7); /* fond semi-transparent derrière le texte */
+            background-color: rgba(0, 0, 0, 0.7);
             padding: 50px;
             min-height: 100vh;
         }
@@ -76,7 +76,8 @@ h2{
     <div class="overlay">
         <h1>INSANIA LUDUM</h1>
 
-        <p>Si vous voulez connaîtrela fin de l’histoire,  commencez par la jouer...</p>
+        <p>Ce jeu est à jouer à 2 et mettra votre intelligence à l'épreuve. 
+            Si vous voulez connaître la fin de l’histoire,  commencez par la jouer...</p>
 
         <button onclick="alert('Le jeu sera bientôt disponible !')">JOUEZ</button>
         
